# micro-benchmarks

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  testset.cfg
ci/: build_gtest.sh  build_tinydnn.sh
common/clientapi/: AmesterMeasurements.hpp
common/host/: ServerAmesterMeasurements.tcl
common/util/: BenchmarkRunner.hpp  ConfigReader.cpp  ConfigReader.h  ConfigTest.cpp  test.config
kw/: Makefile  README.md
kw/boot/: Makefile  boot.c  crt0.S  link.ld
kw/libcxl/: Makefile  README.md  libcxl.c  libcxl.h
kw/liboprecomp/: Makefile  elfparse.c  liboprecomp.c  liboprecomp.h  staticpack.c
kw/mb/blstm/: Makefile  README.md
kw/mb/blstm/common/include/: neuron_com.h
kw/mb/blstm/host/: Makefile
kw/mb/blstm/host/include/: neuron.hpp
kw/mb/blstm/host/src/: host.cpp  neuron.cpp
kw/mb/blstm/pulp/: Makefile
kw/mb/blstm/pulp/include/: generate_luts.h  neuron.h  tiny_math.h
kw/mb/blstm/pulp/src/: neuron.c  pulp.c
kw/samples/nop/: Makefile  testset.cfg
kw/samples/nop/host/: Makefile
kw/samples/nop/pulp/: Makefile  pulp.c
kw/samples/square/: Makefile  testset.cfg
kw/samples/square/host/: Makefile  host.c
kw/samples/square/pulp/: Makefile  generate_vectors.py  pulp.c  square_exp.vec  square_stm.vec
mb/: .gitignore  BenchmarkRunner.sh  benchmarks.sh  configPowerMeasurement.sh
mb/HalfPR/: PR_Pull_6_10.c  PR_Push_3_13.c  README.md
mb/blstm/: BenchmarkRunner.sh  CMakeLists.txt  prepare.sh  readme.txt  test.sh
mb/blstm/CMake_includes/: compiler_options.cmake
mb/blstm/benchmark/: CMakeLists.txt  myBenchmarkRunner.cpp
mb/blstm/include/: neuron.hpp
mb/blstm/src/: main.cpp  neuron.cpp
mb/cnn/: benchmark.sh
mb/cnn/baseline/: Makefile  run.sh  tf-infer.py
mb/cnn/baseline/src/: ConvLayer.c  ConvLayer.h  ConvPoolLayer.c  DenseLayer.c  PoolLayer.c  huffman.c  linalg.c
mb/cnn/gpu/: run.sh
mb/cnn/kw/: Makefile
mb/cnn/kw/host/: Makefile  host.c
mb/cnn/kw/pulp/: Makefile  pulp.c
mb/common/: amester-tool.c  measure.py  measure_data.csv  measure_header.csv  oprecomp.c  oprecomp.h  tabularize.py
mb/fft/: Makefile  README.md  benchmarks.sh  fft_stick.c  run_fftw.c  test.sh
mb/gd/: Makefile  benchmark.sh  prepare.sh
mb/gd/baseline/: Makefile  cifar10.py  plot.gp  prepare_cifar10.py  run.sh  tf-learn.py  train.cpp
mb/gd/baseline/tf/: cifar10.py
mb/gd/gpu/: run.sh
mb/glq/: BenchmarkRunner.sh  CMakeLists.txt  test.sh
mb/glq/benchmark/: CMakeLists.txt  myBenchmarkRunner.cpp
mb/glq/lib/: CMakeLists.txt  README.txt  gauss_legendre.c  kernels.cpp  kernels.h
mb/glq/testsuite/: CMakeLists.txt  MB000.cpp  MB001.cpp
mb/glq/util/: Check.hpp  GenzFunctions.hpp  IO.hpp  Show.hpp
mb/idle/: BenchmarkRunner.sh  CMakeLists.txt
mb/idle/benchmark/: CMakeLists.txt  myBenchmarkRunner.cpp
mb/kmeans/: Makefile  benchmark.sh  omp_main.c  prepare.sh
mb/knn/: Makefile  benchmark.sh  convert.pl  knn.c  prepare.sh
mb/lstm/: README.txt  build.sh  test.sh
mb/pagerank/: BenchmarkRunner.sh  CMakeLists.txt  MBConfig.h.in  list2matrix.c  prepare.files  prepare.sh  sftp-config.json  test.sh
mb/pagerank/benchmark/: BenchmarkResultParser.cpp  CMakeLists.txt  TimePowerEnergyPlotter.py  myBenchmarkRunner.cpp
mb/pagerank/lib/: CMakeLists.txt  kernels.cpp  kernels.cu  kernels.h
mb/pagerank/testsuite/: CMakeLists.txt  MB000.cpp  MB001.cpp  run.cpp  test000.cpp
mb/pagerank/testsuite/data/: float_in000.csv  float_in001.csv  float_in002.csv  int_in000.csv
mb/pagerank/util/: Check.hpp  IO.hpp  Show.hpp
mb/pca/: .gitignore  Makefile  Makefile.pulp  benchmark.sh  dat.h  f2c.h  fixed_point.h  ilaslc.c  ilaslr.c  init.h  libSVM_load_model.c  libSVM_predict.c  main.c  modelSVM.h  mrrr.h  pca_.c  pca_.h  pca_mrrr.c  saxpy.c  scopy.c  sdot.c  sgemv.c  sger.c  slae2.c  slaebz.c  slaev2.c  slaneg.c  slanst.c  slapy2.c  slar1v.c  slarf.c  slarfg.c  slarnv.c  slarra.c  slarrb.c  slarrc.c  slarrd.c  slarrd.f  slarre.c  slarrf.c  (+26 more)
mb/sample/benchmark/: Makefile  README.md  benchmark.sh  main.c
mb/sample/cmake/: CMakeLists.txt
mb/sample/data/: build.sh  expected.txt  prepare.sh  test.sh
mb/sample/gtest/: CMakeLists.txt  main.cpp
mb/sample/make/: Makefile  main.cpp
mb/sample/shell/: build.sh  test.sh
mb/sparsesolve/: Makefile  benchmark.sh  cg.c  cg.h  floatm.h  ir.c  matrix.c  matrix.h  mmio.c  prepare.sh  sparsesolve.c  vector.h
mb/stencil/: Makefile  Makefile.gpu  README.md  jacobi.c  jacobi.cu  prepare.sh  test.sh
mb/stencil/probe_heat/: Makefile  Makefile.probe  diffnorm.c  main.c  probe_heat.c  run.h  util.c
mb/svm/: README.md
mb/svm/baseline/: CMakeLists.txt  README.md  test.sh
mb/svm/baseline/src/thundersvm/: CMakeLists.txt  thundersvm-train.cpp
mb/svm/gpu/: CMakeLists.txt  test.sh
mb/svm/gpu/src/thundersvm/: CMakeLists.txt  thundersvm-train.cpp
